[package]
name = "rust-competition-programming-contest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.3.6"

[[bin]]
name = "tessoku_book_a_01"
path = "src/tessoku-book/A01.rs"

[[bin]]
name = "tessoku_book_a_02"
path = "src/tessoku-book/A02.rs"

[[bin]]
name = "tessoku_book_a_03"
path = "src/tessoku-book/A03.rs"

[[bin]]
name = "tessoku_book_a_04"
path = "src/tessoku-book/A04.rs"

[[bin]]
name = "tessoku_book_a_05"
path = "src/tessoku-book/A05.rs"

[[bin]]
name = "tessoku_book_a_06"
path = "src/tessoku-book/A06.rs"

[[bin]]
name = "tessoku_book_a_07"
path = "src/tessoku-book/A07.rs"

[[bin]]
name = "tessoku_book_a_08"
path = "src/tessoku-book/A08.rs"

[[bin]]
name = "tessoku_book_a_09"
path = "src/tessoku-book/A09.rs"

[[bin]]
name = "tessoku_book_a_10"
path = "src/tessoku-book/A10.rs"

[[bin]]
name = "test"
path = "src/test.rs"