[package]
name = "rust-competition-programming-contest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.3.6"

[[bin]]
name = "test"
path = "src/test.rs"
[[bin]]
name = "main"
path = "src/main.rs"
[[bin]]
name = "tessoku_book_a09"
path = "src/tessoku-book/A09.rs"
[[bin]]
name = "tessoku_book_a08"
path = "src/tessoku-book/A08.rs"
[[bin]]
name = "tessoku_book_a07"
path = "src/tessoku-book/A07.rs"
[[bin]]
name = "tessoku_book_a03"
path = "src/tessoku-book/A03.rs"
[[bin]]
name = "tessoku_book_a13"
path = "src/tessoku-book/A13.rs"
[[bin]]
name = "tessoku_book_a02"
path = "src/tessoku-book/A02.rs"
[[bin]]
name = "tessoku_book_a12"
path = "src/tessoku-book/A12.rs"
[[bin]]
name = "tessoku_book_a06"
path = "src/tessoku-book/A06.rs"
[[bin]]
name = "tessoku_book_a01"
path = "src/tessoku-book/A01.rs"
[[bin]]
name = "tessoku_book_a11"
path = "src/tessoku-book/A11.rs"
[[bin]]
name = "tessoku_book_a05"
path = "src/tessoku-book/A05.rs"
[[bin]]
name = "tessoku_book_a15"
path = "src/tessoku-book/A15.rs"
[[bin]]
name = "tessoku_book_a04"
path = "src/tessoku-book/A04.rs"
[[bin]]
name = "tessoku_book_a14"
path = "src/tessoku-book/A14.rs"
[[bin]]
name = "tessoku_book_a10"
path = "src/tessoku-book/A10.rs"
[[bin]]
name = "tessoku-book-A16"
path = "src/tessoku-book/A16.rs"
[[bin]]
name = "tessoku-book-A17"
path = "src/tessoku-book/A17.rs"
[[bin]]
name = "tessoku-book-A18"
path = "src/tessoku-book/A18.rs"
[[bin]]
name = "tessoku-book-A19"
path = "src/tessoku-book/A19.rs"
[[bin]]
name = "tessoku-book-A20"
path = "src/tessoku-book/A20.rs"
[[bin]]
name = "tessoku-book-A21"
path = "src/tessoku-book/A21.rs"
[[bin]]
name = "tessoku-book-A22"
path = "src/tessoku-book/A22.rs"
[[bin]]
name = "tessoku-book-A23"
path = "src/tessoku-book/A23.rs"
[[bin]]
name = "tessoku-book-A24"
path = "src/tessoku-book/A24.rs"
[[bin]]
name = "tessoku-book-A25"
path = "src/tessoku-book/A25.rs"
[[bin]]
name = "tessoku-book-A26"
path = "src/tessoku-book/A26.rs"
[[bin]]
name = "tessoku-book-A27"
path = "src/tessoku-book/A27.rs"
[[bin]]
name = "tessoku-book-A28"
path = "src/tessoku-book/A28.rs"
[[bin]]
name = "tessoku-book-A29"
path = "src/tessoku-book/A29.rs"
[[bin]]
name = "tessoku-book-A30"
path = "src/tessoku-book/A30.rs"
[[bin]]
name = "tessoku-book-A31"
path = "src/tessoku-book/A31.rs"
[[bin]]
name = "tessoku-book-A32"
path = "src/tessoku-book/A32.rs"
[[bin]]
name = "tessoku-book-A33"
path = "src/tessoku-book/A33.rs"
[[bin]]
name = "tessoku-book-A34"
path = "src/tessoku-book/A34.rs"
[[bin]]
name = "tessoku-book-A37"
path = "src/tessoku-book/A37.rs"
[[bin]]
name = "tessoku-book-A36"
path = "src/tessoku-book/A36.rs"
[[bin]]
name = "tessoku-book-A38"
path = "src/tessoku-book/A38.rs"
[[bin]]
name = "tessoku-book-A39"
path = "src/tessoku-book/A39.rs"
[[bin]]
name = "tessoku-book-A40"
path = "src/tessoku-book/A40.rs"
[[bin]]
name = "tessoku-book-A41"
path = "src/tessoku-book/A41.rs"
[[bin]]
name = "tessoku-book-A42"
path = "src/tessoku-book/A42.rs"
[[bin]]
name = "tessoku-book-A43"
path = "src/tessoku-book/A43.rs"
[[bin]]
name = "tessoku-book-A44"
path = "src/tessoku-book/A44.rs"
[[bin]]
name = "tessoku-book-A45"
path = "src/tessoku-book/A45.rs"
[[bin]]
name = "tessoku-book-A46"
path = "src/tessoku-book/A46.rs"
[[bin]]
name = "tessoku-book-A51"
path = "src/tessoku-book/A51.rs"
[[bin]]
name = "tessoku-book-A52"
path = "src/tessoku-book/A52.rs"
[[bin]]
name = "tessoku-book-A53"
path = "src/tessoku-book/A53.rs"
[[bin]]
name = "tessoku-book-A55"
path = "src/tessoku-book/A55.rs"
[[bin]]
name = "tessoku-book-A56"
path = "src/tessoku-book/A56.rs"
[[bin]]
name = "tessoku-book-A57"
path = "src/tessoku-book/A57.rs"
[[bin]]
name = "tessoku-book-A58"
path = "src/tessoku-book/A58.rs"
[[bin]]
name = "tessoku-book-A59"
path = "src/tessoku-book/A59.rs"
[[bin]]
name = "tessoku-book-A60"
path = "src/tessoku-book/A60.rs"
[[bin]]
name = "tessoku-book-A61"
path = "src/tessoku-book/A61.rs"
[[bin]]
name = "tessoku-book-A62"
path = "src/tessoku-book/A62.rs"
[[bin]]
name = "tessoku-book-A63"
path = "src/tessoku-book/A63.rs"
[[bin]]
name = "tessoku-book-A64"
path = "src/tessoku-book/A64.rs"
[[bin]]
name = "tessoku-book-A65"
path = "src/tessoku-book/A65.rs"
[[bin]]
name = "tessoku-book-A66"
path = "src/tessoku-book/A66.rs"
[[bin]]
name = "tessoku-book-A71"
path = "src/tessoku-book/A71.rs"
[[bin]]
name = "tessoku-book-A72"
path = "src/tessoku-book/A72.rs"
[[bin]]
name = "tessoku-book-A73"
path = "src/tessoku-book/A73.rs"
[[bin]]
name = "tessoku-book-A74"
path = "src/tessoku-book/A74.rs"
[[bin]]
name = "tessoku-book-A75"
path = "src/tessoku-book/A75.rs"
[[bin]]
name = "tessoku-book-A76"
path = "src/tessoku-book/A76.rs"
[[bin]]
name = "tessoku-book-A77"
path = "src/tessoku-book/A77.rs"
[[bin]]
name = "tessoku-book-B01"
path = "src/tessoku-book/B01.rs"
[[bin]]
name = "tessoku-book-B02"
path = "src/tessoku-book/B02.rs"
[[bin]]
name = "tessoku-book-B03"
path = "src/tessoku-book/B03.rs"
[[bin]]
name = "tessoku-book-B04"
path = "src/tessoku-book/B04.rs"
[[bin]]
name = "tessoku-book-B07"
path = "src/tessoku-book/B07.rs"
[[bin]]
name = "tessoku-book-B06"
path = "src/tessoku-book/B06.rs"
[[bin]]
name = "tessoku-book-B08"
path = "src/tessoku-book/B08.rs"
[[bin]]
name = "tessoku-book-B09"
path = "src/tessoku-book/B09.rs"
[[bin]]
name = "tessoku-book-B11"
path = "src/tessoku-book/B11.rs"
[[bin]]
name = "tessoku-book-B13"
path = "src/tessoku-book/B13.rs"
[[bin]]
name = "tessoku-book-B14"
path = "src/tessoku-book/B14.rs"
[[bin]]
name = "tessoku-book-B12"
path = "src/tessoku-book/B12.rs"
[[bin]]
name = "tessoku-book-B16"
path = "src/tessoku-book/B16.rs"
